# shellama

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCKER_TESTING.md  Dockerfile  Dockerfile.ansible-test  Makefile  Pipfile  README.md  docker-compose.ansible-test.yml  mock_shellama_api.py  pyproject.toml  run_ansible_tests.sh  run_docker_tests.sh  setup.py
ansible_tests/: apilama_gateway_test.yml  directory_operations_tests.yml  error_handling_tests.yml  file_operations_tests.yml  generate_report.yml  git_operations_tests.yml  mock_file_tests.yml  mock_git_tests.yml  mock_shell_tests.yml  report_template.html.j2  run_dir_tests.yml  run_error_tests.yml  run_file_tests.yml  run_git_tests.yml  run_shell_tests.yml  shell_operations_tests.yml  shellama_test_playbook.yml
logs/: pylama.db  shellama.db
shellama/: app.py  dir_ops.py  logger.py  logging_config.py
spylog/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  src.txt
spylog/spylog/: __init__.py  config.py  main.py  validator.py
spylog/tests/: __init__.py  test_main.py  test_validator.py
spylog/tests/fixtures/: invalid_syntax.py  security_warning.py  valid_script.py
test_markdown/: README.md  test_files_report.json  verify_test_files.py
test_markdown/devops_tools/: ANSIBLE_TESTING.md  Dockerfile  README.md  ansible.cfg  ansible_playbook.yml  ansible_test_docker_compose.yml  ansible_test_dockerfile  docker-compose.yml  github_workflow.yml  jenkins_pipeline.groovy  kubernetes_deployment.yml  mock_service.py  mock_service_dockerfile  terraform_example.tf
test_markdown/devops_tools/inventory/: hosts
test_markdown/file_operations/: README.md  config_example.json  large_file.txt  markdown_example.md  script_example.py  simple_text.txt
test_markdown/git_operations/: README.md  config.json  conflict_file.md  feature_file.md  main_file.md  project_code.py
test_markdown/shell_commands/: README.md  data_processing.sh  environment_test.sh  error_test.sh  sample_data.txt  test_script.sh
tests/: __init__.py  conftest.py  test_basic.py  test_dir_ops.py  test_file_ops.py
