[tool.poetry]
name = "shellama"
version = "0.1.0"
description = "Shell and filesystem operations REST API service for the PyLama ecosystem"
authors = ["PyLama Team <info@example.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/py-lama/shellama"
packages = [{include = "shellama"}]

[tool.poetry.dependencies]
python = "^3.8"
pathlib = "^1.0.1"
gitpython = "^3.1.0"
flask = "^2.0.0"
flask-cors = "^3.0.10"
python-dotenv = "^0.19.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.0.0"
mypy = "^1.0.0"
tox = "^4.0.0"
ansible = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
