[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "shellama"
version = "0.1.13"
description = "Shell and filesystem operations REST API service for the PyLama ecosystem"
authors = ["Tom Sapletta <info@example.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/py-lama/shellama"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]

[project.urls]
Homepage = "https://github.com/py-lama/shellama"
Documentation = "https://py-lama.github.io/shellama/"
Repository = "https://github.com/py-lama/shellama"
Changelog = "https://github.com/py-lama/shellama/blob/main/CHANGELOG.md"
Tracker = "https://github.com/py-lama/shellama/issues"
Download = "https://pypi.org/project/shellama/"
[[tool.poetry.packages]]
include = "shellama"

[tool.black]
line-length = 88
target-version = [ "py38",]
include = "\\.pyi?$"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.poetry.dependencies]
python = "^3.8"
pathlib = "^1.0.1"
gitpython = "^3.1.0"
flask = "^2.0.0"
flask-cors = "^3.0.10"
python-dotenv = "^0.19.0"
requests = "^2.28.0"

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.0.0"
mypy = "^1.0.0"
tox = "^4.0.0"
ansible = "^6.0.0"
